# scratch-ai-rag

./: .gitignore  NOTES.md  README.md  app.py  llama-index-tutorial.py  pyproject.toml  rag-test.py
.zed/: settings.json
archive/test-data/: testdata.txt
src/: config.py  engine.py  query.py
